--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
-        "consulta/laravel": "^0.2.4",
+        "consulta/laravel": "*",
         "fruitcake/laravel-cors": "^2.0",
         "giansalex/peru-consult": "^4.5",
         "guzzlehttp/guzzle": "^7.0.1",
